--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,9 @@
-/* You can add global styles to this file, and also import other style files */
+body {
+    margin: 0;
+    background-color: rgb(23, 20, 20);
+    color: white;
+    font-family: "Caveat", cursive;
+    font-family: "Homemade Apple", cursive;
+    font-family: "Nothing You Could Do", cursive;
+    scroll-behavior: smooth;
+}
