links&Impressum/datenschutz

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,3 +4,8 @@
 <!-- //--------Reihenfolge beachten---------------// -->
 <app-skills></app-skills>
 <app-workers></app-workers>
+<app-project></app-project>
+<app-contact></app-contact>
+<app-footer></app-footer>
+<app-impressum></app-impressum>
+<app-datenschutz></app-datenschutz>
