--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,4 +1,4 @@
-<div class="front">
+<div class="front" id="home">
     <div class="animated-text">
       <span>Hey I´m Matthias Märsch</span>
     </div>
