--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,12 +1,12 @@
 <div>
     <div class="container">
       <ul>
-        <li><a href="#"><i class="fas fa-home" aria-hidden="true"></i></a></li>        
-        <li><a href="#"><i class="fas fa-align-left" aria-hidden="true"></i></a></li>
-        <li><a href="#"><i class="fas fa-graduation-cap" aria-hidden="true"></i></a></li>
-        <li><a href="#"><i class="fas fa-project-diagram" aria-hidden="true"></i></a></li>
-        <li><a href="#"><i class="fas fa-user-edit" aria-hidden="true"></i></a></li>
-        <li><a href="#"><i class="fas fa-map-marked-alt" aria-hidden="true"></i></a></li>
+        <li><a href="#home"><i class="fas fa-home" aria-hidden="true"></i></a></li>        
+        <li><a href="#skills"><i class="fas fa-align-left" aria-hidden="true"></i></a></li>
+        <li><a href="#work"><i class="fas fa-graduation-cap" aria-hidden="true"></i></a></li>
+        <li><a href="#project"><i class="fas fa-project-diagram" aria-hidden="true"></i></a></li>
+        <li><a href="#contact"><i class="fas fa-user-edit" aria-hidden="true"></i></a></li>
+        <li><a href="#map"><i class="fas fa-map-marked-alt" aria-hidden="true"></i></a></li>
         
       </ul>
     </div>
