--- a/src/app/skills/skills.component.html
+++ b/src/app/skills/skills.component.html
@@ -1,4 +1,4 @@
-<div class="containers">
+<div class="containers" id="skills">
 	<h1>Skills</h1>
 	<div class="wrapper">
 		<div class="container">
@@ -65,23 +65,49 @@
 		<div class="container">
 			<div class="label six">
 				<i class="far fa-lightbulb"></i>
-				Creative
+				Scrum
 			</div>
 			<div class="progress-bar">
 				<div class="progress fill-6">
 					<div class="glow"></div>
 				</div>
 			</div>
+
 		</div>
-	</div>
-	<div class="buttons">
-		<div class="button-down">
-			<a href="/index.html">
-				<i class="fas fa-chevron-circle-right"></i>
-			</a>
-			
-		</div>
-        <p>NEXT</p>
+
 	</div>
 
+	<!-- <div class="skills">
+
+		<ul>
+			<li>
+				<a href="#">
+					Scrum
+				</a>
+			</li>
+			<li>
+				<a href="#">
+					Rest API
+				</a>
+			</li>
+			<li>
+				<a href="#">
+					Test automation
+				</a>
+			</li>
+			<li>
+				<a href="#">
+					Database
+				</a>
+			</li>
+			<li>
+				<a href="#">
+					Design Thinking
+				</a>
+			</li>
+			
+
+		</ul>
+
+	</div> -->
 </div>
