--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -1,5 +1,5 @@
 .front {
-    width: 100vw;
+    width: 90vw;
     height: 100vh;
     display: flex;
     justify-content: center;
@@ -59,4 +59,51 @@ img {
         box-shadow: inset 0 0 60px whitesmoke, inset 20px 0 80px #f0f, inset -20px 0 80px #0ff, inset 20px 0 300px #f0f,
             inset -20px 0 300px #0ff, 0 0 50px #fff, -10px 0 80px #f0f, 10px 0 80px #0ff;
     }
+}
+
+@media screen and (max-width: 1000px) {
+    .front {
+        width: 90vw;
+        height: 100vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+    }
+
+    .animated-text {
+       display: flex;
+       justify-content: center;
+       align-items: center;
+       position: absolute;
+    }
+
+    img {
+        display: flex;
+        justify-content: center;        
+        position: absolute;
+        border-radius: 50%;
+        animation-name: avatar;
+        animation-duration: 4s;
+        animation-iteration-count: 1;
+        animation-fill-mode: forwards;
+        animation-delay: 1s;
+    }
+    
+    @keyframes avatar {
+        from {
+            left: 40%;
+            top: 20%;
+        }
+    
+        to {
+            
+            top: 60%;
+            width: 200px;
+            height: 200px;
+            box-shadow: inset 0 0 60px whitesmoke, inset 20px 0 80px #f0f, inset -20px 0 80px #0ff, inset 20px 0 300px #f0f,
+                inset -20px 0 300px #0ff, 0 0 50px #fff, -10px 0 80px #f0f, 10px 0 80px #0ff;
+        }
+    }
+
 }
