--- a/src/app/workers/workers.component.scss
+++ b/src/app/workers/workers.component.scss
@@ -1,57 +1,3 @@
-// .lebenslauf {
-//     margin: 0;
-//     width: 100vw;
-//     height: 100vh;
-//     display: flex;
-//     flex-wrap: wrap;
-// }
-
-// .part {
-//     width: 500px;
-//     height: 230px;
-//     margin: 1px;
-//     background-color: yellow;
-// }
-// .part img {
-//     width: 500px;
-//     height: 200px;
-//     object-fit: cover;
-//     max-width: 100%;
-//     overflow: hidden;
-// }
-
-// .img-slideShow {
-//     object-fit: cover;
-//     max-width: 100%;
-//     animation-name: slide;
-//     animation-duration: 10s;
-//     animation-direction: normal;
-//     animation-timing-function: ease;
-//     animation-iteration-count: infinite;
-// }
-// @keyframes slide {
-//     0% {
-//         background-position: 0 0;
-//     }
-//     16.66% {
-//         background-position: 0 0;
-//     }
-//     33.32% {
-//         background-position: -800px 0;
-//     }
-//     49.98% {
-//         background-position: -800px 0;
-//     }
-//     66.64% {
-//         background-position: -1600px 0;
-//     }
-//     83.30% {
-//         background-position: -1600px 0;
-//     }
-//     100% {
-//         background-position: 0 0;
-//     }
-// }
 
 *::before,
 *::after {
@@ -60,15 +6,34 @@
   box-sizing: border-box;
 }
 
+h1 {
+  font-size: 1.2em;
+  
+}
+
+span {
+  font-size: 45px;
+}
+
+p {
+  font-size: 1.1em;
+  text-align: center;
+  margin-top: -10px;
+  
+}
+
+// .box {
+//   box-shadow:5px 5px 0px  rgb(42, 5, 42);
+// }
+
 .lebenslauf {
-    // font: normal 16px/1.5 'Titillium Web', sans-serif;
-    background: rgb(23, 20, 20);
-    color: whitesmoke;
-    overflow: scroll;
-    padding-bottom: 50px;
-  }
-
-
+  // font: normal 16px/1.5 'Titillium Web', sans-serif;
+  // background: rgb(23, 20, 20);
+  color: whitesmoke;
+  overflow: hidden;
+  padding-bottom: 50px;
+  text-align: center;
+}
 
 .timeline {
   ul {
@@ -78,9 +43,9 @@
       width: 6px;
       margin: 0 auto;
       padding-top: 50px;
-      background: #fff;
+      background: rgb(255, 255, 255);
       &::after {
-        content: '';
+        content: "";
         position: absolute;
         left: 50%;
         bottom: 0;
@@ -88,63 +53,70 @@
         width: 20px;
         height: 20px;
         z-index: 110;
-        background: #eee;
+        background: #fff;
       }
       div {
         position: relative;
         bottom: 0;
-        width: 400px;
-        padding: 20px;
-        background: #0ff;
-        box-shadow: 4px 13px 30px 1px rgba(252, 56, 56, 0.2);
+        width: 33vw;
+        height: 27vh;
+        background: rgb(45, 40, 40);
+        
         border-radius: 5px;
         display: flex;
         align-items: center;
         time {
           position: absolute;
-          background: #f5af19;
-          width: 80px;
+          background: rgb(32, 74, 74);
+          width: 85px;
           height: 30px;
-          top: -15px;
+          top: -20px;
+          left: 45%;
           border-radius: 5px;
+          font-size: 14px;
           display: flex;
           justify-content: center;
+          z-index: 5;
           align-items: center;
           letter-spacing: 2px;
         }
         div {
-          height: 100px;
+          height: 27vh;
+          width: 33vw;
           display: flex;
+          overflow: inherit;
           flex-direction: column;
           justify-content: center;
           align-items: center;
           p {
-            text-align: center;
+            text-align: start;
           }
         }
         .discovery {
-          margin-right: 10px;
+          width: 30vw;
+          height: 20vh;
+          margin: 10px;
         }
         .img {
-            width: 50px;
-            height: 50px;
-            object-fit: cover;
+          width: 200px;
+          height: 200px;
+          object-fit: cover;
+          border-radius: 5px;
         }
       }
       &:nth-of-type(odd) {
         > div {
-          left: 45px;
+          left: 7vw;
         }
       }
       &:nth-of-type(even) {
         > div {
-          left: -439px;
+          left: -40vw;
         }
       }
     }
   }
 }
-
 
 .timeline {
   ul {
@@ -175,85 +147,59 @@
   }
 }
 
+@media screen and (max-width: 1000px) {
+  .img {
+    width: 50px;
+    height: 50px;
+  }
+  p {
+    display: none;
+  }
+  
+  .timeline {
+    ul {
+      li {
+        margin-left: 20px;
+        div {
+          width: 60vw;
+          height: 25vh;
+          
+          div {
+            height: 20vh;
+            margin: 10px;
+          }
+        }
+        &:nth-of-type(even) {
+          > div {
+            left: 45px;
+          }
+        }
+      }
+    }
+  }
+}
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-// @media screen and (max-width: 900px) {
-//   .timeline {
-//     ul {
-//       li {
-//         div {
-//           width: 250px;
-//           flex-direction: column;
-//           div {
-//             width: 80%;
-//             margin: 10px;
-//           }
-//         }
-//         &:nth-of-type(even) {
-//           > div {
-//             left: -289px;
-//           }
-//         }
-//       }
-//     }
-//   }
-// }
-
-// @media screen and (max-width: 600px) {
-//   body {
-//     background: #8bfff4;
-//   }
-//   .timeline {
-//     ul {
-//       li {
-//         margin-left: 20px;
-//         div {
-//           width: calc(100vw - 91px);
-//         }
-//         &:nth-of-type(even) {
-//           > div {
-//             left: 45px;
-//           }
-//         }
-//       }
-//     }
-//   }
-// }
+@media screen and (max-width: 600px) {
+  .img {
+    display: none;
+  }
+  p {
+    display: none;
+  }
+  .timeline {
+    ul {
+      li {
+        margin-left: 20px;
+        div {
+          width: 60vw;
+          height: 25vh;
+        }
+        &:nth-of-type(even) {
+          > div {
+            left: 45px;
+          }
+        }
+      }
+    }
+  }
+}
