--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,9 +1,14 @@
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     margin: 0;
-    background-color: rgb(23, 20, 20);
+    // background-color: rgb(23, 20, 20);
     color: white;
     font-family: "Caveat", cursive;
     font-family: "Homemade Apple", cursive;
     font-family: "Nothing You Could Do", cursive;
-    scroll-behavior: smooth;
+    background: linear-gradient(180deg, rgb(23, 20, 20),rgb(23, 20, 20), rgba(61, 26, 61, 0.809), rgba(42, 86, 86, 0.816),rgb(23, 20, 20),rgb(23, 20, 20));
+    
 }
