--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,3 @@
-<app-menu></app-menu>
-<app-social></app-social>
-<app-main></app-main>
-<!-- //--------Reihenfolge beachten---------------// -->
-<app-skills></app-skills>
-<app-workers></app-workers>
-<app-project></app-project>
-<app-contact></app-contact>
+<router-outlet></router-outlet>
 <app-footer></app-footer>
-<app-impressum></app-impressum>
-<app-datenschutz></app-datenschutz>
+
