--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,4 +1,5 @@
-<div class="contact" id="contact">
+<div class="contact"
+	id="contact">
 	<div id="contact-form">
 		<div>
 			<h1>Nice to Meet You!</h1>
@@ -13,8 +14,7 @@
 			Your message was sent successfully. Thank you!
 		</p>
 
-		<form method="post"
-			action="/">
+		<form method="post">
 			<div>
 				<label for="name">
 					<span class="required">Name: *</span>
@@ -73,22 +73,12 @@
 
 	</div>
 	<div id="map">
-		<main>
-			<!-- ================== -->
-			<!-- Google Map Element -->
-			<section class="google-map">
-				<div class="map-frame">
-					<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d5284.025946349634!2d11.49466910000001!3d48.532983099999996!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sde!2sde!4v1642030187619!5m2!1sde!2sde"
-						width="600"
-						height="450"
-						style="border:0;"
-						allowfullscreen
-						loading="lazy"></iframe>
-				</div>
-			</section>
-			<!-- Google Map Element -->
-			<!-- ================== -->
-		</main>
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2642.0119358663983!2d11.492457015607382!3d48.533002979256885!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x479e5ea6ea04a629%3A0x677b56204b39732d!2s%C3%84u%C3%9Fere%20Quellengasse%2039%2C%2085276%20Pfaffenhofen%20an%20der%20Ilm!5e0!3m2!1sde!2sde!4v1642084602885!5m2!1sde!2sde"
+			width="600"
+			height="450"
+			style="border:0;"
+			allowfullscreen
+			loading="lazy"></iframe>
 
 	</div>
 </div>
