--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,13 +1,21 @@
-<div class="front" id="home">
-    <div class="animated-text">
-      <span>Hey I´m Matthias Märsch</span>
-    </div>
-    <div class="animated-text">
-      <span>Front End Developer</span>
-    </div>
-    <div class="picture-front">
-      <img src=".\assets\images\avatar.jpg">
-    </div>
-   
-  </div>
-  
+<div class="front"
+	id="home">
+	<div class="animated-text">
+		<span>
+			Hey I´m Matthias Märsch
+		</span>
+	</div>
+	<div class="animated-text">
+		<span>Front End Developer</span>
+	</div>
+	<div class="picture-front">
+		<img src=".\assets\images\avatar.jpg">
+	</div>
+</div>
+
+<app-social></app-social>
+<app-menu></app-menu>
+<app-skills></app-skills>
+<app-workers></app-workers>
+<app-project></app-project>
+<app-contact></app-contact>
