--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,4 +1,4 @@
 <div>
-    <a href="http://">Impressum</a>
-    <a href="http://">Datenschutz</a>
+    <a routerLink="impressum">Impressum</a>
+    <a routerLink="datenschutz">Datenschutz</a>
 </div>
