--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -24,8 +24,7 @@
 						value
 						placeholder="Your Name"
 						required="required"
-						tabindex="1"
-						autofocus="autofocus">
+						tabindex="1">
 				</label>
 			</div>
 			<div>
