--- a/src/app/impressum/impressum.component.html
+++ b/src/app/impressum/impressum.component.html
@@ -1,3 +1,4 @@
+<div class="impressum">
 <h1>Impressum</h1>
 
 <h2>Angaben gem&auml;&szlig; &sect; 5 TMG</h2>
@@ -11,3 +12,6 @@ Telefax: +49 (0) 84415796485<br />
 E-Mail: m.maersch@web.de</p>
 
 <p>Quelle: <a href="https://www.e-recht24.de">e-recht24.de</a></p>
+</div>
+
+<app-menu></app-menu>
