--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,3 +1,4 @@
+<div class="all">
 <div class="front"
 	id="home">
 	<div class="animated-text">
@@ -12,9 +13,11 @@
 		<img src=".\assets\images\avatar.jpg">
 	</div>
 </div>
+</div>
 
 <app-social></app-social>
 <app-menu></app-menu>
+<app-aboutme></app-aboutme>
 <app-skills></app-skills>
 <app-workers></app-workers>
 <app-project></app-project>
