--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,7 +1,8 @@
-<div>
+<div class="resonsive">
     <div class="container">
       <ul>
-        <li><a href="#home"><i class="fas fa-home" aria-hidden="true"></i></a></li>        
+        <li><a href="#home"><i class="fas fa-home" aria-hidden="true"></i></a></li>  
+        <li><a href="#aboutme"><i class="fas fa-book"aria-hidden="true"></i></a></li>      
         <li><a href="#skills"><i class="fas fa-align-left" aria-hidden="true"></i></a></li>
         <li><a href="#work"><i class="fas fa-graduation-cap" aria-hidden="true"></i></a></li>
         <li><a href="#project"><i class="fas fa-project-diagram" aria-hidden="true"></i></a></li>
