--- a/src/app/skills/skills.component.html
+++ b/src/app/skills/skills.component.html
@@ -64,7 +64,7 @@
 
 		<div class="container">
 			<div class="label six">
-				<i class="far fa-lightbulb"></i>
+				<i class="fas fa-redo"></i>
 				Scrum
 			</div>
 			<div class="progress-bar">
