--- a/src/app/social/social.component.html
+++ b/src/app/social/social.component.html
@@ -1,3 +1,4 @@
+<div class="responsive">
 <div class="container">
 	<div class="btn fb-btn">
 		<i class="fab fa-facebook-f"></i>
@@ -11,7 +12,5 @@
 	<div class="btn li-btn">
 		<i class="fab fa-linkedin-in"></i>
 	</div>
-	<div class="btn di-btn">
-		<i class="fab fa-discord"></i>
-	</div>
+</div>
 </div>
