--- a/src/app/workers/workers.component.html
+++ b/src/app/workers/workers.component.html
@@ -13,7 +13,7 @@
 							Abschluss: Mittlere Reife
 						</p>
 					</div>
-					<div>
+					<div class="image">
 						<img class="img" src=".\assets\images\school3.jpg">
 					</div>
 				</div>
@@ -29,7 +29,7 @@
 							Abschluss: Gesellenbrief
 						</p>
 					</div>
-					<div>
+					<div class="image">
 						<img class="img" src=".\assets\images\kfz2.jpg">
 					</div>
 				</div>
@@ -50,7 +50,7 @@
 							
 						</p>
 					</div>
-					<div>
+					<div class="image">
 						<img class="img" src=".\assets\images\kfz.jpg">
 					</div>
 				</div>
@@ -68,7 +68,7 @@
 							Fachbereich: Mechatronik
 						</p>
 					</div>
-					<div>
+					<div class="image">
 						<img class="img" src=".\assets\images\brief.jpg">
 					</div>
 				</div>
@@ -86,7 +86,7 @@
 							Reparaturarbeiten & Technischer Notdienst
 						</p>
 					</div>
-					<div>
+					<div class="image">
 						<img class="img" src="./assets/images/kw.jpeg">
 					</div>
 				</div>
@@ -96,7 +96,7 @@
 					<time>2016-2018</time>
 					<div class="discovery">
 						<h1>
-							Fluggerätemechaniker, Airbus, Manching
+							Techniker, Airbus, Manching
 						</h1>
 						<p>
 							2 Jahresvertrag
@@ -106,7 +106,7 @@
 							an Awacs-Aufkärungsflugzeugen
 						</p>
 					</div>
-					<div>
+					<div class="image">
 						<img class="img" src=".\assets\images\airbus.jpg">
 					</div>
 				</div>
@@ -116,7 +116,7 @@
 					<time>2018-2020</time>
 					<div class="discovery">
 						<h1>
-							CEO-Eventservice, Zweitagebart GmbH
+							Inhaber-Eventservice, Zweitagebart GmbH
 						</h1>
 						<p>
 							Einstellung & Disposition externer Subunternehmer/Mitarbeiter
@@ -124,7 +124,7 @@
 							Koordinationsgespräche mit Kunden/Mitarbeiter
 						</p>
 					</div>
-					<div>
+					<div class="image">
 						<img class="img" src=".\assets\images\dj.jpg">
 					</div>
 				</div>
@@ -140,7 +140,7 @@
 							Abschluss: Zertifikat zum Software Engineer
 						</p>
 					</div>
-					<div>
+					<div class="image">
 						<img class="img" src=".\assets\images\pro.jpg">
 					</div>
 				</div>
