--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -1,9 +1,9 @@
 div {
-    width: 100vw;
+    width: 90vw;
     height: 70px;
     margin: 20px;
     display: flex;
-    justify-content: start;
+    justify-content: center;
     align-items: center;
 
     a {
@@ -11,5 +11,16 @@ div {
         text-decoration: none;
         color: white;
         padding:15px;
+        transition: all 300ms ease-in-out;
+    }
+    
+    a:hover {
+        text-decoration: underline;
+        padding-top: 3px;
+        transition: all 300ms ease-in-out;
+    }
+    p {
+        font-size: 30px;
+
     }
 }
