--- a/src/app/project/project.component.html
+++ b/src/app/project/project.component.html
@@ -45,6 +45,20 @@
 			<img alt="Profile shot for Chad" src="./assets/images/portfolio2.jpg" />
 		  </a>
 		</li>
+		<li>
+			<a href="https://tiktok.com" target=_blank class="profile">
+			  <h2 class="profile__name">Ich</h2>
+			  <p>Schonwieder Ich</p>
+			  <img alt="Profile shot for Chad" src="./assets/images/portfolio2.jpg" />
+			</a>
+		  </li>
+		  <li>
+			<a href="https://tiktok.com" target=_blank class="profile">
+			  <h2 class="profile__name">Ich</h2>
+			  <p>Schonwieder Ich</p>
+			  <img alt="Profile shot for Chad" src="./assets/images/portfolio2.jpg" />
+			</a>
+		  </li>
 	  </ul>
 	</div>
   </article>
