--- a/src/app/project/project.component.scss
+++ b/src/app/project/project.component.scss
@@ -1,10 +1,12 @@
 /* Globals */
 .projects {
-    margin-left: 300px;
-    margin-right: 300px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     margin-top: 100px;
     margin-bottom: 100px;
-    width: 895px;
+    width: 97vw;
+    flex-wrap: wrap;
     
 }
 h1 {
@@ -37,6 +39,7 @@ li {
 
 .flow > * + * {
     margin-top: var(--flow-space, 1em);
+    width: 60vw;
 }
 
 /* Composition */
@@ -93,7 +96,7 @@ li {
 }
 
 .profile::after {
-    background: linear-gradient(45deg, hsl(5 97% 63% / 0.7) 0, hsl(5 97% 63% / 0) 100%);
+    background: linear-gradient(45deg, hsl(5 97% 63% / 0.7) 0,hsl(5 97% 63% / 0) 100%, hsl(5 97% 63% / 0) 100%);
     opacity: 0;
     transition: 300ms opacity linear;
 }
