--- a/src/app/aboutme/aboutme.component.scss
+++ b/src/app/aboutme/aboutme.component.scss
@@ -1,75 +1,56 @@
-#soup-nav {
-    position:absolute;
-    left: 0;
-    right: 0;
-    bottom: 32px;
-    z-index: 9002;
-    font-size: 64px;
-}
-.soup-title {
-  font-size: 32px;
-}
-.soup-desc {
-  font-size: 16px;
+
+
+.center{
+    
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-html, body {
-    width: 100%;
-    height: 100%;
-    background-color: #EEE;
-    color: #111;
+p{
+    width: 70%;
+    font-size: 30px;
+    display: block;
     text-align: center;
-    font-family: 'Open Sans', sans-serif;
 }
-#soup-container {
-    width: 100%;
-    height: 100%;
-    min-width: 320px;
-    min-height: 480px;
-    position: relative;
-}
-.letters-wrap {
-    position: absolute;
-    overflow:hidden;
 
-    display: inline-block;
-    &.mutable {
-        width: 100%;
-        height: 100%;
-        top: 0;
-        left: 0;
-        .letter {
-            position: absolute;
-            left: 0;
-            top: 0;
-            transition: left 2s, top 2s, color 2s;
-            color: "#AAA";
-            &.active {
-                color: "#111";
-                z-index: 9001;
-            }
-        }
-    }
-    &.position-data {
-        top: 50%;
-        left: 50%;
-        //Uncomment for visualization/debug
-        /*opacity: 0.1;*/
-        visibility: hidden;
-        transform: translate(-50%, -50%);
-    }
-}
-.segment {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-}
-.letter {
+.char{
+    font-size: 40px;
+    height: 40px;
+    animation: an 1s ease-out 1 both;
     display: inline-block;
 }
-button {
-    z-index: 9001;
-    position:relative;
+
+@keyframes an{
+    from{
+        opacity: 0;
+        transform: perspective(500px) translate3d(-35px, -40px, -150px) rotate3d(1, -1, 0, 35deg);
+    }
+    to{
+        opacity: 1;
+        transform: perspective(500px) translate3d(0, 0, 0);
+    }
+}
+.mylink{
+position: absolute;
+z-index: 150;
+bottom: 0;
+right: 0;
+width: 100%;
+text-align: right;
+padding: .6rem;
+}
+
+.mylink a{
+font-family: Calibri;
+color: #fff;
+border-bottom: 1px solid #fff;
+opacity: .5;
+transition: opacity .3s;
+text-decoration: none
+}
+.mylink a:hover{
+opacity: 1
 }
