--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -1,4 +1,5 @@
 div {
+    
     width: 90vw;
     height: 70px;
     margin: 20px;
@@ -10,7 +11,7 @@ div {
         font-size: 25px;
         text-decoration: none;
         color: white;
-        padding:15px;
+        margin:15px;
         transition: all 300ms ease-in-out;
     }
     
