--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -1,5 +1,5 @@
 .all {
-    margin: 0;
+    margin: 0;    
 }
 
 .front {
@@ -61,8 +61,10 @@ img {
         top: 35%;
         width: 300px;
         height: 300px;
-        box-shadow: inset 0 0 60px whitesmoke, inset 20px 0 80px #f0f, inset -20px 0 80px #0ff, inset 20px 0 300px #f0f,
-            inset -20px 0 300px #0ff, 0 0 50px #fff, -10px 0 80px #f0f, 10px 0 80px #0ff;
+        box-shadow: inset 0 0 60px whitesmoke, inset 20px 0 80px rgb(225,28,6), inset -20px 0 80px rgb(240,111,56), inset 20px 0 300px rgb(225,28,6),
+            inset -20px 0 300px rgb(240,111,56), 0 0 50px #fff, -10px 0 80px rgb(225,28,6), 10px 0 80px rgb(240,111,56);
+        // box-shadow: inset 0 0 60px whitesmoke, inset 20px 0 80px #f0f, inset -20px 0 80px #0ff, inset 20px 0 300px #f0f,
+        // inset -20px 0 300px #0ff, 0 0 50px #fff, -10px 0 80px #f0f, 10px 0 80px #0ff;
     }
 }
 
