--- a/src/app/workers/workers.component.scss
+++ b/src/app/workers/workers.component.scss
@@ -22,9 +22,9 @@ p {
   
 }
 
-// .box {
-//   box-shadow:5px 5px 0px  rgb(42, 5, 42);
-// }
+.box {
+  box-shadow:5px 5px 0px  rgb(42, 5, 42);
+}
 
 .lebenslauf {
   // font: normal 16px/1.5 'Titillium Web', sans-serif;
