--- a/src/app/aboutme/aboutme.component.html
+++ b/src/app/aboutme/aboutme.component.html
@@ -1,5 +1,10 @@
-<div class="center">
-	<p id="text">
-		Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate incidunt praesentium, rerum voluptatem in reiciendis officia harum repudiandae tempore suscipit ex ea, adipisci ab porro.
+<div id="aboutme"
+	class="center">
+	<p #text>
+		<!-- Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate incidunt praesentium,
+		<br>
+		rerum voluptatem in reiciendis officia harum repudiandae
+		<br>
+		tempore suscipit ex ea, adipisci ab porro. -->
 	</p>
 </div>
