--- a/src/app/project/project.component.html
+++ b/src/app/project/project.component.html
@@ -6,21 +6,21 @@
 		<li>
 		  <a href="http://matthias-maersch.developerakademie.net/sakuraramen/" target=_blank class="profile">
 			<h2 class="profile__name">Sakura Rahmen</h2>
-			<p>HTML  /  CSS Webpage <br></p>
+			<p>HTML  /  CSS Website <br></p>
 			<img alt="Anita Simmons" src="./assets/images/sakura.png" />
 		  </a>
 		</li>
 		<li>
 		  <a href="http://matthias-maersch.developerakademie.net/lieferando2/" target=_blank class="profile">
 			<h2 class="profile__name">Lieferando</h2>
-			<p>HTML  /  CSS  /  Javascript Webpage</p>
+			<p>HTML  /  CSS  /  Javascript Website</p>
 			<img alt="Profile shot for Celina Harris" src="./assets/images/lieferando.png" />
 		  </a>
 		</li>
 		<li>
 		  <a href="http://matthias-maersch.developerakademie.net/kanbanboard/" target=_blank class="profile">
 			<h2 class="profile__name">Kanbanboard</h2>
-			<p>HTML  /  CSS  /  Javascript Business Webpage</p>
+			<p>HTML  /  CSS  /  Javascript Business Website</p>
 			<img alt="Profile shot for Ruby Morris" src="./assets/images/kanban.png" />
 		  </a>
 		</li>
@@ -32,10 +32,10 @@
 		  </a>
 		</li>
 		<li>
-		  <a href="https://instagram.com" target=_blank class="profile">
-			<h2 class="profile__name">Ich</h2>
-			<p>Immernoch Ich</p>
-			<img alt="Profile shot for Marc Dixon" src="./assets/images/portfolio1.jpg" />
+		  <a href="https://djzweitagebart.de/" target=_blank class="profile">
+			<h2 class="profile__name">Eventdienst<br>leister</h2>
+			<p>WordPress Website</p>
+			<img alt="Profile shot for Marc Dixon" src="./assets/images/djseite.jpg" />
 		  </a>
 		</li>
 		<li>
