--- a/src/app/social/social.component.html
+++ b/src/app/social/social.component.html
@@ -1,13 +1,13 @@
 <div class="responsive">
 <div class="container">
 	<div class="btn fb-btn">
-		<i class="fab fa-facebook-f"></i>
+		<a href="https://www.facebook.com/mmaersch/" ><i class="fab fa-facebook-f"></i></a>
 	</div>
 	<div class="btn ig-btn">
-		<i class="fab fa-instagram"></i>
+		<a href="https://www.instagram.com/djzweitagebart/"><i class="fab fa-instagram"></i></a>
 	</div>
 	<div class="btn gh-btn">
-		<i class="fab fa-github"></i>
+		<a href="https://github.com/Malevv/"><i class="fab fa-github"></i></a>
 	</div>
 	<div class="btn li-btn">
 		<i class="fab fa-linkedin-in"></i>
