--- a/src/app/workers/workers.component.html
+++ b/src/app/workers/workers.component.html
@@ -69,7 +69,7 @@
 						</p>
 					</div>
 					<div class="image">
-						<img class="img" src=".\assets\images\brief.jpg">
+						<img class="img" src="./assets/images/Zeugnis Meister.jpg">
 					</div>
 				</div>
 			</li>
