--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -10,7 +10,7 @@
 		<span>Front End Developer</span>
 	</div>
 	<div class="picture-front">
-		<img src=".\assets\images\avatar.jpg">
+		<img src=".\assets\images\1.png">
 	</div>
 </div>
 </div>
