--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -61,8 +61,8 @@ img {
         top: 35%;
         width: 300px;
         height: 300px;
-        box-shadow: inset 0 0 60px whitesmoke, inset 20px 0 80px rgb(225,28,6), inset -20px 0 80px rgb(240,111,56), inset 20px 0 300px rgb(225,28,6),
-            inset -20px 0 300px rgb(240,111,56), 0 0 50px #fff, -10px 0 80px rgb(225,28,6), 10px 0 80px rgb(240,111,56);
+        box-shadow: inset 0 0 40px whitesmoke, inset 20px 0 60px rgb(225,28,6), inset -20px 0 60px rgb(240,111,56), inset 20px 0 100px rgb(225,28,6),
+            inset -20px 0 100px rgb(240,111,56), 0 0 20px #fff, -10px 0 60px rgb(225,28,6), 10px 0 60px rgb(240,111,56);
         // box-shadow: inset 0 0 60px whitesmoke, inset 20px 0 80px #f0f, inset -20px 0 80px #0ff, inset 20px 0 300px #f0f,
         // inset -20px 0 300px #0ff, 0 0 50px #fff, -10px 0 80px #f0f, 10px 0 80px #0ff;
     }
@@ -114,6 +114,7 @@ img {
         display: flex;
         justify-content: center;
         position: absolute;
+        background-position: left;
         left: 30%;
         width: 300px;
         height: 300px;
@@ -136,8 +137,8 @@ img {
             width: 200px;
             height: 200px;
             left: 30%;
-            box-shadow: inset 0 0 60px whitesmoke, inset 20px 0 80px #f0f, inset -20px 0 80px #0ff,
-                inset 20px 0 300px #f0f, inset -20px 0 300px #0ff, 0 0 50px #fff, -10px 0 80px #f0f, 10px 0 80px #0ff;
+            box-shadow: inset 0 0 40px whitesmoke, inset 20px 0 60px rgb(225,28,6), inset -20px 0 60px rgb(240,111,56), inset 20px 0 100px rgb(225,28,6),
+            inset -20px 0 100px rgb(240,111,56), 0 0 20px #fff, -10px 0 60px rgb(225,28,6), 10px 0 60px rgb(240,111,56);
         }
     }
 }
@@ -176,8 +177,8 @@ img {
             width: 200px;
             height: 200px;
             left: 27%;
-            box-shadow: inset 0 0 60px whitesmoke, inset 20px 0 80px #f0f, inset -20px 0 80px #0ff,
-                inset 20px 0 300px #f0f, inset -20px 0 300px #0ff, 0 0 50px #fff, -10px 0 80px #f0f, 10px 0 80px #0ff;
+            box-shadow: inset 0 0 40px whitesmoke, inset 20px 0 60px rgb(225,28,6), inset -20px 0 60px rgb(240,111,56), inset 20px 0 100px rgb(225,28,6),
+            inset -20px 0 100px rgb(240,111,56), 0 0 20px #fff, -10px 0 60px rgb(225,28,6), 10px 0 60px rgb(240,111,56);
         }
     }
 }
