--- a/src/app/aboutme/aboutme.component.html
+++ b/src/app/aboutme/aboutme.component.html
@@ -1,10 +1,6 @@
 <div id="aboutme"
 	class="center">
-	<p #text>
-		<!-- Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate incidunt praesentium,
-		<br>
-		rerum voluptatem in reiciendis officia harum repudiandae
-		<br>
-		tempore suscipit ex ea, adipisci ab porro. -->
+	<p #text [innerHtml]="newDom">
+	
 	</p>
 </div>
