--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -3,11 +3,11 @@
 	id="home">
 	<div class="animated-text">
 		<span>
-			Hey I´m Matthias Märsch
+			Hi Ich bin Matthias Märsch
 		</span>
 	</div>
 	<div class="animated-text">
-		<span>Front End Developer</span>
+		<span>Frontend Entwickler</span>
 	</div>
 	<div class="picture-front">
 		<img src=".\assets\images\1.png">
