--- a/src/app/project/project.component.html
+++ b/src/app/project/project.component.html
@@ -13,7 +13,7 @@
 		<li>
 		  <a href="http://matthias-maersch.developerakademie.net/lieferando2/" target=_blank class="profile">
 			<h2 class="profile__name">Lieferando</h2>
-			<p>HTML  /  CSS  /  Javascript Website</p>
+			<p>HTML  /  CSS  /  Javascript <br>Website</p>
 			<img alt="Profile shot for Celina Harris" src="./assets/images/lieferando.png" />
 		  </a>
 		</li>
